force-app/main/default/objects/Icon_Condition__mdt/Icon_Condition__mdt.object-meta.xml
<CustomObject>
    <label>Icon Condition</label>
    <pluralLabel>Icon Conditions</pluralLabel>
</CustomObject>