force-app/main/default/objects/Icon_Condition__mdt/fields/Icon_Condition_Group__c.field-meta.xml
<CustomField>
    <fullName>Icon_Condition_Group__c</fullName>
    <description>Lookup to the Icon Condition Group that this Icon Condition belongs to.</description>
    <inlineHelpText>Lookup to the Icon Condition Group that this Icon Condition belongs to.</inlineHelpText>
    <label>Icon Condition Group</label>
    <referenceTo>Icon_Condition_Group__mdt</referenceTo>
    <relationshipLabel>Icon Conditions</relationshipLabel>
    <relationshipName>Icon_Conditions</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>