force-app/main/default/objects/Icon_Condition__mdt/fields/Interval__c.field-meta.xml
<CustomField>
    <fullName>Interval__c</fullName>
    <description>If the Source Field Data Type is &quot;Date&quot; AND the Operator Type is &quot;System Variable&quot;, specify the unit of time for the &quot;Qualitfying Value&quot;. If using &quot;Today&quot; or &quot;Now&quot;, no &quot;Qualifying Value&quot; is required.</description>
    <inlineHelpText>If the Source Field Data Type is &quot;Date&quot; AND the Operator Type is &quot;System Variable&quot;, specify the unit of time for the &quot;Qualitfying Value&quot;. If using &quot;Today&quot; or &quot;Now&quot;, no &quot;Qualifying Value&quot; is required.</inlineHelpText>
    <label>Interval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Years</fullName>
            </value>
            <value>
                <fullName>Now</fullName>
            </value>
            <value>
                <fullName>Today</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>