force-app/main/default/objects/Icon_Condition__mdt/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <description>The comparison operator to be used when evaluating the actual value of a record vs the qualifying value.</description>
    <inlineHelpText>The comparison operator to be used when evaluating the actual value of a record vs the qualifying value.</inlineHelpText>
    <label>Operator</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equal To</fullName>
                <default>true</default>
                <label>Equal To</label>
            </value>
            <value>
                <fullName>Not Equal To</fullName>
            </value>
            <value>
                <fullName>Greater Than</fullName>
            </value>
            <value>
                <fullName>Greater Than Or Equal To</fullName>
            </value>
            <value>
                <fullName>Less Than</fullName>
            </value>
            <value>
                <fullName>Less Than Or Equal To</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>