force-app/main/default/objects/Icon_Condition__mdt/fields/Operator_Type__c.field-meta.xml
<CustomField>
    <fullName>Operator_Type__c</fullName>
    <description>Literal, if you are using a real value as the qualifying value i.e. &apos;Test 123&apos;
System Variable, if you are using a relative date as a qualifying value. i.e. Greater Than...180 Days, Today, etc.</description>
    <inlineHelpText>Literal, if you are using a real value as the qualifying value i.e. &apos;Test 123&apos;
System Variable, if you are using a relative date as a qualifying value. i.e. Greater Than...180 Days, Today, etc.</inlineHelpText>
    <label>Operator Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Literal</fullName>
                <default>true</default>
                <label>Literal</label>
            </value>
            <value>
                <fullName>System Variable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>