force-app/main/default/objects/Icon_Condition__mdt/fields/Qualifying_Value__c.field-meta.xml
<CustomField>
    <fullName>Qualifying_Value__c</fullName>
    <description>The value that qualifies this icon to be shown on the specified record. Can be literal or based on a system variable. See examples in quotations, i.e. Credit_Decision__c = &quot;Rejected&quot;, Credit_Check_Date__c Greater Than &quot;180 days&quot;, etc. Note, do not include the quotations, only the value.</description>
    <inlineHelpText>The value that qualifies this icon to be shown on the specified record. Can be literal or based on a system variable. See examples in quotations, i.e. Credit_Decision__c = &quot;Rejected&quot;, Credit_Check_Date__c Greater Than &quot;180 days&quot;, etc. Note, do not include the quotations, only the value.</inlineHelpText>
    <label>Qualifying Value</label>
    <type>TextArea</type>
</CustomField>