force-app/main/default/objects/Icon_Condition__mdt/fields/Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Field__c</fullName>
    <description>API name of the field from the selected Source Map to evaluate, i.e. Credit_Decision__c, etc.</description>
    <inlineHelpText>API name of the field from the selected Source Map to evaluate, i.e. Credit_Decision__c, etc.</inlineHelpText>
    <label>Source Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>