force-app/main/default/objects/Icon_Condition__mdt/fields/Source_Field_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Field_Data_Type__c</fullName>
    <description>Data type of the identified Source Field.</description>
    <inlineHelpText>Data type of the identified Source Field.</inlineHelpText>
    <label>Source Field Data Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boolean</fullName>
                <default>true</default>
                <label>Boolean</label>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>String</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>