force-app/main/default/objects/Icon_Condition__mdt/fields/Source_Map__c.field-meta.xml
<CustomField>
    <fullName>Source_Map__c</fullName>
    <description>The object containing the field to be evaluated for this condition, i.e. Account, Contact, Custom_Object__c, etc.</description>
    <inlineHelpText>The object containing the field to be evaluated for this condition, i.e. Account, Contact, Custom_Object__c, etc.</inlineHelpText>
    <label>Source Map</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>