force-app/main/default/objects/Icon_Condition__mdt/listViews/All_Icon_Conditions.listView-meta.xml
<ListView>
    <fullName>All_Icon_Conditions</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Icon_Condition_Group__c</columns>
    <columns>Source_Map__c</columns>
    <columns>Source_Field__c</columns>
    <columns>Operator__c</columns>
    <columns>Qualifying_Value__c</columns>
    <columns>Interval__c</columns>
    <columns>Source_Field_Data_Type__c</columns>
    <columns>Operator_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Icon Conditions</label>
    <language>en_US</language>
</ListView>